force-app/main/default/objects/IP_Inventor__c/IP_Inventor__c.object-meta.xml
<CustomObject>
    <description>[Technology Transfer Starter] Holds information about the inventors and also details of percentage share for royalty distribution along with alternative distribution.</description>
    <label>Inventor</label>
    <nameField>
        <displayFormat>INVENT{000000}</displayFormat>
        <label>Inventor ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>