force-app/main/default/objects/IP_Inventor__c/fields/IP_AlternativeContact__c.field-meta.xml
<CustomField>
    <fullName>IP_AlternativeContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Contact object</description>
    <inlineHelpText>Has an alternative contact been identified the main contact on this contribution, for the purposed of distribution of funds etc.</inlineHelpText>
    <label>Alternative Distribution</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Inventors (Alternative Distribution)</relationshipLabel>
    <relationshipName>IP_Alternative_Contribution_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>