force-app/main/default/objects/IP_Inventor__c/fields/IP_Contribution__c.field-meta.xml
<CustomField>
    <fullName>IP_Contribution__c</fullName>
    <label>IP</label>
    <referenceTo>IP__c</referenceTo>
    <relationshipName>Contributions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>