force-app/main/default/objects/IP_Inventor__c/fields/IP_Contribution_Description__c.field-meta.xml
<CustomField>
    <fullName>IP_Contribution_Description__c</fullName>
    <inlineHelpText>Provide details and a description of how this person contributed to the IP</inlineHelpText>
    <label>Contribution Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>