force-app/main/default/objects/IP_Inventor__c/fields/IP_Contribution_Role__c.field-meta.xml
<CustomField>
    <fullName>IP_Contribution_Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inventor</fullName>
            </value>
            <value>
                <fullName>Researcher</fullName>
            </value>
            <value>
                <fullName>Assistant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>