force-app/main/default/objects/IP_Inventor__c/fields/IP_Inventor__c.field-meta.xml
<CustomField>
    <fullName>IP_Inventor__c</fullName>
    <formula>IF(
ISBLANK( IP_AlternativeContact__r.FirstName ), 
 IP_Original_Inventor_Name__r.FirstName + &quot; &quot; +  IP_Original_Inventor_Name__r.LastName,
IP_AlternativeContact__r.FirstName + &quot; &quot; +  IP_AlternativeContact__r.LastName
)</formula>
    <inlineHelpText>The current active inventor name. By default this will be the original inventor although should an alternative distribution be defined, then that name will override.</inlineHelpText>
    <label>Inventor</label>
    <type>Text</type>
</CustomField>