force-app/main/default/objects/IP_Inventor__c/fields/IP_Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>IP_Is_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this contribution by the primary inventor or lead?</inlineHelpText>
    <label>Is Primary</label>
    <type>Checkbox</type>
</CustomField>