force-app/main/default/objects/IP_Inventor__c/fields/IP_Original_Inventor_Name__c.field-meta.xml
<CustomField>
    <fullName>IP_Original_Inventor_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to contact object.</description>
    <inlineHelpText>Contact record related to the researcher, inventor or other party involved with contributing to the IP</inlineHelpText>
    <label>Original Inventor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Inventors (Original Inventor)</relationshipLabel>
    <relationshipName>Contributions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>