force-app/main/default/objects/IP_Inventor__c/fields/Percentage_Share__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Share__c</fullName>
    <inlineHelpText>What percentage share does that person have for IP</inlineHelpText>
    <label>Percentage Share</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>